--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ DB_PASSWORD=laad
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=sport_app_db
-URL_AUTORIZADOR=http://localhost:3000/autorizador
+URL_AUTORIZADOR=http://localhost:3000
